azure-cosmos-db/1.1/modules/ROOT/pages/azure-cosmos-db-connector-reference.adoc


= Azure Cosmos DB Connector 1.1 Reference



== Configurations
---
[[KeyTokenConfig]]
=== Key Token Config


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<KeyTokenConfig_KeyTokenAuth, Key Token Auth Connection Provider>>
 | Connection types for this configuration. | | x
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  60 |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  SECONDS |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)
+
Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`
+
Connector always streams the request content.

* `NEVER`
+
Connector does not stream the request content. |  AUTO |
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
|===

==== Connection Types
[[KeyTokenConfig_KeyTokenAuth]]
===== Key Token Auth Connection Provider


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Proxy Config a| <<Proxy>> |  Configures a proxy for outbound connections. |  |
| Default Headers a| Array of <<DefaultHeader>>. |  |  |
| Query Parameters a| Array of <<DefaultQueryParam>>. |  |  |
| Connection Timeout a| Number |  How long the connector waits before timing out when establishing a connection to the remote service. |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Timeout* field. |  SECONDS |
| Use Persistent Connections a| Boolean a|  Indicates whether to use persistent connections:

* `true`
+
Mule uses persistent connections.

* `false`
+
Mule closes the connection after the first request completes. |  true |
| Max Connections a| Number |  Maximum number of connections to open to the backend. HTTP requests are sent in parallel over multiple connections. Setting this value too high can impact latency and consume additional resources without increasing throughput. |  -1 |
| Connection Idle Timeout a| Number |  When persistent connections are enabled, how long a connection can remain idle before Mule closes it. |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Idle Timeout* field. |  SECONDS |
| Stream Response a| Boolean |  If this value is `true`, Mule streams received responses. |  false |
| Response Buffer Size a| Number |  Size of the buffer that stores the HTTP response, in bytes. |  -1 |
| Database account url a| String |  Database account URL. |  | x
| Key token a| String |  All access key token that enables users to have full control of the Cosmos DB resources. |  | x
| Version a| String |  Version of the Cosmos DB REST service. |  | x
| TLS configuration a| <<Tls>> |  If HTTPS is configured as a protocol, the user must configure at least the keystore configuration. |  |
| Reconnection a| <<Reconnection>> a|  What to do if, when an app is deployed, a connectivity test does not pass after exhausting the associated reconnection strategy:

* `true`
+
Allow the deployment to fail.

* `false`
+
Ignore the results of the connectivity test. |  |
|===

== Supported Operations
* <<CreateDocument>>
* <<CreatePermission>>
* <<CreateStoredProcedure>>
* <<DeleteDocument>>
* <<DeletePermission>>
* <<DeleteStoredProcedure>>
* <<ExecuteStoredProcedure>>
* <<GetDocument>>
* <<GetPermission>>
* <<ListDocuments>>
* <<ListPermissions>>
* <<ListStoredProcedures>>
* <<QueryDocuments>>
* <<ReplaceDocument>>
* <<ReplacePermission>>
* <<ReplaceStoredProcedure>>


---
[[ResourceTokenConfig]]
=== Resource Token Config


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<ResourceTokenConfig_ResourceTokenAuth, Resource Token Auth Connection Provider>>
 | Connection types for this configuration. | | x
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  60 |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  SECONDS |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)
+
Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`
+
Connector always streams the request content.

* `NEVER`
+
Connector does not stream the request content. |  AUTO |
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
|===

==== Connection Types
[[ResourceTokenConfig_ResourceTokenAuth]]
===== Resource Token Auth Connection Provider


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Proxy Config a| <<Proxy>> |  Configures a proxy for outbound connections. |  |
| Default Headers a| Array of <<DefaultHeader>>. |  |  |
| Query Parameters a| Array of <<DefaultQueryParam>>. |  |  |
| Connection Timeout a| Number |  How long the connector waits before timing out when establishing a connection to the remote service. |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Timeout* field. |  SECONDS |
| Use Persistent Connections a| Boolean a|  Indicates whether to use persistent connections:

* `true`
+
Mule uses persistent connections.

* `false`
+
Mule closes the connection after the first request completes. |  true |
| Max Connections a| Number |  Maximum number of connections to open to the backend. HTTP requests are sent in parallel over multiple connections. Setting this value too high can impact latency and consume additional resources without increasing throughput. |  -1 |
| Connection Idle Timeout a| Number |  When persistent connections are enabled, how long a connection can remain idle before Mule closes it. |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Idle Timeout* field. |  SECONDS |
| Stream Response a| Boolean |  If this value is `true`, Mule streams received responses. |  false |
| Response Buffer Size a| Number |  Size of the buffer that stores the HTTP response, in bytes. |  -1 |
| Database account url a| String |  Database account URL. |  | x
| Resource token a| String |  Resource token. |  | x
| Version a| String |  Version of the Cosmos DB REST service. |  | x
| TLS configuration a| <<Tls>> |  If HTTPS is configured as a protocol, the user must configure at least the keystore configuration. |  |
| Reconnection a| <<Reconnection>> a|  What to do if, when an app is deployed, a connectivity test does not pass after exhausting the associated reconnection strategy:

* `true`
+
Allow the deployment to fail.

* `false`
+
Ignore the results of the connectivity test. |  |
|===

== Supported Operations
* <<CreateDocument>>
* <<CreateStoredProcedure>>
* <<DeleteDocument>>
* <<DeleteStoredProcedure>>
* <<ExecuteStoredProcedure>>
* <<GetDocument>>
* <<ListDocuments>>
* <<ListStoredProcedures>>
* <<QueryDocuments>>
* <<ReplaceDocument>>
* <<ReplaceStoredProcedure>>



---
[[ServicePrincipalConfig]]
=== Service Principal Config


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<ServicePrincipalConfig_ServicePrincipalAuth, Service Principal Auth Connection Provider>>
 | Connection types for this configuration. | | x
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  60 |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  SECONDS |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)
+
Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`
+
Connector always streams the request content.

* `NEVER`
+
Connector does not stream the request content. |  AUTO |
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
|===

==== Connection Types
[[ServicePrincipalConfig_ServicePrincipalAuth]]
===== Service Principal Auth Connection Provider


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Proxy Config a| <<Proxy>> |  Configures a proxy for outbound connections. |  |
| Default Headers a| Array of <<DefaultHeader>>. |  |  |
| Query Parameters a| Array of <<DefaultQueryParam>>. |  |  |
| Connection Timeout a| Number |  How long the connector waits before timing out when establishing a connection to the remote service. |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Timeout* field. |  SECONDS |
| Use Persistent Connections a| Boolean a|  Indicates whether to use persistent connections:

* `true`
+
Mule uses persistent connections.

* `false`
+
Mule closes the connection after the first request completes. |  true |
| Max Connections a| Number |  Maximum number of connections to open to the backend. HTTP requests are sent in parallel over multiple connections. Setting this value too high can impact latency and consume additional resources without increasing throughput. |  -1 |
| Connection Idle Timeout a| Number |  When persistent connections are enabled, how long a connection can remain idle before Mule closes it. |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Idle Timeout* field. |  SECONDS |
| Stream Response a| Boolean |  If this value is `true`, Mule streams received responses. |  false |
| Response Buffer Size a| Number |  Size of the buffer that stores the HTTP response, in bytes. |  -1 |
| Database account url a| String |  Database account URL. |  | x
| Client ID a| String |  Application (client) ID of the Microsoft Entra ID service principal. |  | x
| Client secret a| String |  Client secret of the Microsoft Entra ID service principal. |  | x
| Tenant ID a| String |  Microsoft Entra ID tenant the service principal belongs to. |  | x
| Version a| String |  Version of the Cosmos DB REST service. |  | x
| TLS configuration a| <<Tls>> |  If HTTPS is configured as a protocol, the user must configure at least the keystore configuration. |  |
| Reconnection a| <<Reconnection>> a|  What to do if, when an app is deployed, a connectivity test does not pass after exhausting the associated reconnection strategy:

* `true`
+
Allow the deployment to fail.

* `false`
+
Ignore the results of the connectivity test. |  |
|===

== Supported Operations
* <<CreateDocument>>
* <<DeleteDocument>>
* <<ExecuteStoredProcedure>>
* <<GetDocument>>
* <<ListDocuments>>
* <<QueryDocuments>>
* <<ReplaceDocument>>



== Operations

[[CreateDocument]]
== Create Document
`<azure-cosmos-db-connector-mule-4:create-document>`


Creates a new document in a collection. This operation makes an HTTP POST request to the /dbs/{dbId}/colls/{collId}/docs endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the stored procedure is created. |  | x
| Coll Id a| String |  Name of the collection in which the stored procedure is created. |  | x
| X ms documentdb is upsert a| Boolean a|  If set to `true`, Cosmos DB does the following:

* Creates the document with the ID (and partition key value, if applicable), if the document doesn't exist.
* Updates the document, if it exists. |  false |
| X ms indexing directive a| Enumeration, one of:

** INCLUDE
** EXCLUDE |  The default for indexing behavior is determined by the automatic property's value in the indexing policy for the collection. |  |
| X ms documentdb partitionkey a| String |  Partition key value for the document to create. Must be specified only if the collection is created with a *partitionKey* definition, for example, ["partitionKey"]. |  |
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>
* <<ResourceTokenConfig>>
* <<ServicePrincipalConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[CreatePermission]]
== Create Permission
`<azure-cosmos-db-connector-mule-4:create-permission>`


Creates a new permission in a database. This operation makes an HTTP POST request to the /dbs/{dbId}/users/{userName}/permissions endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the permission is created. |  | x
| Username a| String |  Name of the user that owns the permission. |  | x
| X ms documentdb expiry seconds a| Number |  Validity period of the resource token returned by the operation. By default, a resource token is valid for one hour. To override the default, set this header with the desired validity period in seconds. The max override value is 18000, which is five hours. |  |
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[CreateStoredProcedure]]
== Create Stored Procedure
`<azure-cosmos-db-connector-mule-4:create-stored-procedure>`


Creates a new stored procedure in a collection. This operation makes an HTTP POST request to the /dbs/{dbId}/colls/{collId}/sprocs endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the stored procedure is created. |  | x
| Coll Id a| String |  Name of the collection in which the stored procedure is created. |  | x
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>
* <<ResourceTokenConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[DeleteDocument]]
== Delete Document
`<azure-cosmos-db-connector-mule-4:delete-document>`


Deletes an existing document from a collection. This operation makes an HTTP DELETE request to the /dbs/{dbId}/colls/{collId}/docs/{doc-id} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the stored procedure is created. |  | x
| Coll Id a| String |  Name of the collection in which the stored procedure is created. |  | x
| Doc ID a| String |  ID of the document to delete. |  | x
| X ms documentdb partitionkey a| String |  Partition key value for the document to delete. Must be specified only if the collection is created with a *partitionKey* definition, for example, ["partitionKey"]. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>
* <<ResourceTokenConfig>>
* <<ServicePrincipalConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[DeletePermission]]
== Delete Permission
`<azure-cosmos-db-connector-mule-4:delete-permission>`


Deletes a permission from a database. This operation makes an HTTP DELETE request to the /dbs/{dbId}/users/{userName}/permissions/{permissionId} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the permission is deleted. |  | x
| Username a| String |  Name of the user that owns the permission. |  | x
| Permission Id a| String |  ID of the permission to delete. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[DeleteStoredProcedure]]
== Delete Stored Procedure
`<azure-cosmos-db-connector-mule-4:delete-stored-procedure>`


Deletes an existing stored procedure from a collection. This operation makes an HTTP DELETE request to the /dbs/{dbId}/colls/{collId}/sprocs/{sprocId} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the stored procedure is created. |  | x
| Coll Id a| String |  Name of the collection in which the stored procedure is created. |  | x
| Sproc Id a| String |  ID of the stored procedure to delete. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>
* <<ResourceTokenConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[ExecuteStoredProcedure]]
== Execute Stored Procedure
`<azure-cosmos-db-connector-mule-4:execute-stored-procedure>`


Executes a stored procedure by performing a POST on a stored procedure resource. This operation makes an HTTP POST request to the /dbs/{dbId}/colls/{collId}/sprocs/{sprocId} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User generated name or ID of the database in which the stored procedure is executed. |  | x
| Coll Id a| String |  Name of the collection in which the stored procedure is executed. |  | x
| Sproc Id a| String |  ID of the stored procedure to execute. |  | x
| Body a| Array of String |  Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>
* <<ResourceTokenConfig>>
* <<ServicePrincipalConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[GetDocument]]
== Get Document
`<azure-cosmos-db-connector-mule-4:get-document>`


Retrieves a document by its partition key and document key. This operation makes an HTTP GET request to the /dbs/{dbId}/colls/{collId}/docs/{doc-id} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the stored procedure is created. |  | x
| Coll Id a| String |  Name of the collection in which the stored procedure is created. |  | x
| Doc ID a| String |  Name of the document to replace. |  | x
| If None Match a| String |  Indicates whether the operation is conditional, which means if the response includes a body, the value in the database is different from the specified value in the header. The value must be the ETag of the resource. |  |
| X ms documentdb partitionkey a| String |  Partition key value for the document to read. Must be specified only if the collection is created with a *partitionKey* definition, for example, ["partitionKey"]. |  |
| X ms consistency level a| Enumeration, one of:

** STRONG
** BOUNDED
** SESSION
** EVENTUAL |  Consistency level override. The valid values are listed in order of strongest to weakest. The override must be the same or weaker than the account's configured consistency level. |  |
| X ms session token a| String |  String token used with session level consistency. Clients must echo the latest read value of this header during read requests for session consistency. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>
* <<ResourceTokenConfig>>
* <<ServicePrincipalConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[GetPermission]]
== Get Permission
`<azure-cosmos-db-connector-mule-4:get-permission>`


Gets a permission from the specified database. This operation makes an HTTP GET request to the /dbs/{dbId}/users/{userName}/permissions/{permissionId} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the permission is retrieved. |  | x
| Username a| String |  Name of the user that owns the permission. |  | x
| Permission Id a| String |  ID of the permission to retrieve. |  | x
| X ms documentdb expiry seconds a| Number |  Validity period of the resource token returned by the operation. By default, a resource token is valid for one hour. To override the default, set this header with the desired validity period in seconds. The max override value is 18000, which is five hours. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[ListDocuments]]
== List Documents
`<azure-cosmos-db-connector-mule-4:list-documents>`


Returns a list of documents under the collection. This operation makes an HTTP GET request to the /dbs/{dbId}/colls/{collId}/docs endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the stored procedure is created. |  | x
| Coll Id a| String |  Name of the collection in which the stored procedure is created. |  | x
| X ms consistency level a| Enumeration, one of:

** STRONG
** BOUNDED
** SESSION
** EVENTUAL |  Consistency level override. The valid values are listed in order of strongest to weakest. The override must be the same or weaker than the account's configured consistency level. |  |
| X ms session token a| String |  String token used with session level consistency. Clients must echo the latest read value of this header during read requests for session consistency. |  |
| A im a| String |  Must be set to `Incremental feed`, or omitted otherwise. Available for REST API version 2016-07-11 and later. |  |
| If None Match a| String a|  Available for REST API version 2016-07-11 and later.

* No header
+
Returns all changes from the beginning (collection creation).

* "*"
+
Returns all new changes to data within the collection.

* A collection ETag
+
Returns all changes made since that logical timestamp.  |  |
| X ms documentdb partitionkeyrangeid a| String |  Partition key range ID for reading data. Available for REST API version 2016-07-11 and later. |  |
| Output Mime Type a| String |  MIME type of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Any
|===

=== For Configurations

* <<KeyTokenConfig>>
* <<ResourceTokenConfig>>
* <<ServicePrincipalConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED

[[ListPermissions]]
== List Permissions
`<azure-cosmos-db-connector-mule-4:list-permissions>`


Lists permissions of a user from a database. This operation makes an HTTP GET request to the /dbs/{dbId}/users/{userName}/permissions endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the permission is listed. |  | x
| Username a| String |  Name of the user that owns the permission. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[ListStoredProcedures]]
== List Stored Procedures
`<azure-cosmos-db-connector-mule-4:list-stored-procedures>`


Returns a list of the stored procedures in the collection. This operation makes an HTTP GET request to the /dbs/{dbId}/colls/{collId}/sprocs endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the stored procedure is created. |  | x
| Coll Id a| String |  Name of the collection in which the stored procedure is created. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>
* <<ResourceTokenConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[QueryDocuments]]
== Query Documents
`<azure-cosmos-db-connector-mule-4:query-documents>`


Queries documents. This operation makes an HTTP POST request to the /dbs/{dbId}/colls/{collId}/docs endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the stored procedure is created. |  | x
| Coll Id a| String |  Name of the collection in which the stored procedure is created. |  | x
| X ms documentdb query enablecrosspartition a| Boolean |  If the collection is partitioned, this parameter must be set to `true` to enable execution across multiple partitions. Queries that filter against a single partition key, or against single-partitioned collections do not need to set the header. |  false |
| X ms consistency level a| Enumeration, one of:

** STRONG
** BOUNDED
** SESSION
** EVENTUAL |  Consistency level override. The valid values are listed in order of strongest to weakest. The override must be the same or weaker than the account's configured consistency level. |  |
| X ms session token a| String |  String token used with session level consistency. Clients must echo the latest read value of this header during read requests for session consistency. |  |
| Body a| Any | Content to use. |  #[payload] |
| Output Mime Type a| String |  MIME type of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Any
|===

=== For Configurations

* <<KeyTokenConfig>>
* <<ResourceTokenConfig>>
* <<ServicePrincipalConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[ReplaceDocument]]
== Replace Document
`<azure-cosmos-db-connector-mule-4:replace-document>`


Replaces the entire content of a document. This operation makes an HTTP PUT request to the /dbs/{dbId}/colls/{collId}/docs/{doc-id} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the stored procedure is created. |  | x
| Coll Id a| String |  Name of the collection in which the stored procedure is created. |  | x
| Doc ID a| String |  Name of the document to replace. |  | x
| If Match a| String |  Indicates whether an operation is conditional for optimistic concurrency, which means the document is updated only if the specified ETag matches the current version in the database. The value must be set to the ETag value of the resource. |  |
| X ms indexing directive a| Enumeration, one of:

** INCLUDE
** EXCLUDE |  The default for indexing behavior is determined by the automatic property's value in the indexing policy for the collection. |  |
| X ms documentdb partitionkey a| String |  Partition key value for the document to replace. Must be specified only if the collection is created with a *partitionKey* definition, for example, ["partitionKey"]. |  |
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>
* <<ResourceTokenConfig>>
* <<ServicePrincipalConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[ReplacePermission]]
== Replace Permission
`<azure-cosmos-db-connector-mule-4:replace-permission>`


Replaces a permission from a database. This operation makes an HTTP PUT request to the /dbs/{dbId}/users/{userName}/permissions/{permissionId} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the permission is replaced. |  | x
| Username a| String |  Name of the user that owns the permission. |  | x
| Permission Id a| String |  ID of the permission to replace. |  | x
| X ms documentdb expiry seconds a| Number |  Validity period of the resource token returned by the operation. By default, a resource token is valid for one hour. To override the default, set this header with the desired validity period in seconds. The max override value is 18000, which is five hours. |  |
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED


[[ReplaceStoredProcedure]]
== Replace Stored Procedure
`<azure-cosmos-db-connector-mule-4:replace-stored-procedure>`


Replaces the entire stored procedure resource. All user settable properties, including the ID and the body, must be submitted in the body to perform the replacement. This operation makes an HTTP PUT request to the /dbs/{dbId}/colls/{collId}/sprocs/{sprocId} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Db Id a| String |  User-generated name or ID of the database in which the stored procedure is replaced. |  | x
| Coll Id a| String |  Name of the collection in which the stored procedure is replaced. |  | x
| Sproc Id a| String |  ID of the stored procedure to replace. |  | x
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER a|  How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Maps error types thrown by this operation to custom error types. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<KeyTokenConfig>>
* <<ResourceTokenConfig>>

=== Throws

* AZURE-COSMOS-DB-CONNECTOR-MULE-4:BAD_REQUEST
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CLIENT_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:CONNECTIVITY
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:INTERNAL_SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:NOT_FOUND
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:RETRY_EXHAUSTED
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVER_ERROR
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:SERVICE_UNAVAILABLE
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TIMEOUT
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:TOO_MANY_REQUESTS
* AZURE-COSMOS-DB-CONNECTOR-MULE-4:UNAUTHORIZED



== Types
[[Proxy]]
=== Proxy

Configures a proxy for outbound connections.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Hostname or IP address of the proxy server. |  | x
| Port a| Number | Port of the proxy server. |  | x
| Username a| String | Username to authenticate against the proxy server. |  |
| Password a| String | Password to authenticate against the proxy server. |  |
| Non Proxy Hosts a| String | Comma-separated list of hosts that the proxy must not be used against. |  |
|===

[[DefaultHeader]]
=== Default Header

Headers automatically added to every outbound request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Key for this type. |  | x
| Value a| String | Value for this type. |  | x
|===

[[DefaultQueryParam]]
=== Default Query Param

Query parameters automatically added to every outbound request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Key for this type. |  | x
| Value a| String | Value for this type. |  | x
|===

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  |
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | Configures a revocation checking mechanism. |  |
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system. |  |
| Password a| String | Password used to protect the truststore. |  |
| Type a| String | Type of truststore. |  |
| Algorithm a| String | Encryption algorithm that the truststore uses. |  |
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  |
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system. |  |
| Type a| String | Type of keystore. |  |
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  |
| Key Password a| String | Password used to protect the private key. |  |
| Password a| String | Password used to protect the keystore. |  |
| Algorithm a| String | Encryption algorithm that the keystore uses. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`
+
Verify only the last element in the certificate chain.

* `false`
+
Verify all elements in the certificate chain. |  |
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`
+
Check the Certification Revocation List (CRL) for certificate validity.

* `false`
+
Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  |
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:

* `true`
+
Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.

* `false`
+
Do not use the secondary method to check certificate validity. |  |
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`
+
Avoid verification failure.

* `false`
+
Allow the verification to fail. |  |
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  |
|===

[[CrlFile]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  |
|===

=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | What to do if, when an app is deployed, a connectivity test does not pass after exhausting the associated reconnection strategy:

* `true`
+
Allow the deployment to fail.

* `false`
+
Ignore the results of the connectivity test. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<Reconnect Forever>> | Reconnection strategy to use. |  |
|===

=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  |
| Count a| Number | How many reconnection attempts the Mule app can make. |  |
|===

=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  |
|===

[[HttpResponseAttributes]]
=== HTTP Response Attributes

Configures HTTP response attributes for the configuration.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Status Code a| Number | HTTP status code of the response. |  | x
| Headers a| Object | Map of HTTP headers in the message. |  | x
| Reason Phrase a| String | HTTP reason phrase of the response. |  | x
|===

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the MAX buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Initial amount of memory to allocate to the data stream. If the streamed data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max In Memory Size value*. |  |
| Buffer Size Increment a| Number | Amount by which the buffer size expands if it exceeds its initial size. Setting a value of `0` or lower specifies that the buffer can't expand. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Buffer Unit* fields. |  |
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer's content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.

* Configure a smaller buffer size to decrease memory load at the expense of response time. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  |
|===

[[RepeatableInMemoryIterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of instances that is initially be allowed to be kept in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the *Buffer Size Increment* attribute, with an upper limit of *Max In Memory Size*. The default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. The default value is 100 instances. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[RepeatableFileStoreIterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | The maximum amount of instances to keep in memory. If more than that is required, content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  |
|===

[[ErrorMapping]]
=== Error Mapping

Maps source error types to custom error types for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT | Source error type to map. |  |
| Target a| String | Custom error type to map the source error to. |  | x
|===

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.salesforce.com[Salesforce Help]
